Grace/tests/gibbs/errors/t055.grace
// ERROR = P1002
type A {}
